--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=redditclone
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#cofigurari pentru baza de date
+#localhost inseamna ca baza de date este locala
+spring.datasource.url=jdbc:mysql://localhost:3306/reddit_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=lucianforfota91@gmail.com
+spring.mail.password=zswb hlyy lkqk srfv
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
